--- a/MerceariaCom.html
+++ b/MerceariaCom.html
@@ -33,11 +33,6 @@
     <br>
     <p id="valorCarrinho" style="margin-left: 25px;"></p>
 
-
-     <h3 id="valorFinal" style="width: 250px;"></h3>
-
-    <!-- <script src="script.js"></script> -->
-
-    <script src="script.js"></script>
+    <script src="lojaComObjeto.js"></script>
 </body>
 </html>
